Add the cart to the navbar

--- a/src/assets/sass/sub-stylesheet/_main.scss
+++ b/src/assets/sass/sub-stylesheet/_main.scss
@@ -2593,7 +2593,7 @@
 					@extend %flex;
                     @include transform(translateX(-50%));
 					@include transition($transition);
-					a {
+					butaton {
 						width: 40px;
 					    height: 40px;
 					    line-height: 40px;
