Add social icons

--- a/src/assets/sass/sub-stylesheet/_extend.scss
+++ b/src/assets/sass/sub-stylesheet/_extend.scss
@@ -633,6 +633,9 @@ Tags: academy, children, education, institute, kids, kids care, kids care home, 
 %facebook-color {
     color: $facebook;
 }
+%whatsapp-color {
+    color: $green;
+}
 %twitter-color {
     color: $twitter;
 }
@@ -699,6 +702,9 @@ Tags: academy, children, education, institute, kids, kids care, kids care home, 
 
 %bg-facebook {
     background: $facebook;
+}
+%bg-whatsapp {
+    background: $green;
 }
 %bg-twitter {
     background: $twitter;
